test/cgen/wrong/recval.kk
val x = x

fun main() { }